--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/brekkencom/shitsu#readme",
   "dependencies": {
+    "ava": "0.25.0",
     "bluebird": "3.5.1",
     "debug": "3.1.0",
     "dotenv": "6.0.0",
